// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProgressBar expect to render failed bar without error 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-danger wizard-progress-bar"
    id="finished-create-policy"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__description"
      id="finished-create-policy-description"
    >
      Error
    </div>
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        50%
      </span>
      <span
        class="pf-v6-c-progress__status-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 32 32"
          width="1em"
        >
          <path
            d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm-1.5 8a1.5 1.5 0 1 1 3 0v7a1.5 1.5 0 1 1-3 0V9ZM16 25.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 25.001Z"
          />
        </svg>
      </span>
    </div>
    <div
      aria-labelledby="finished-create-policy-description"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 50%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar expect to render progress bar without error 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress wizard-progress-bar"
    id="finished-create-policy"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__description"
      id="finished-create-policy-description"
    >
      Progress
    </div>
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        0%
      </span>
    </div>
    <div
      aria-labelledby="finished-create-policy-description"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 0%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar expect to render success bar without error 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-success wizard-progress-bar"
    id="finished-create-policy"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__description"
      id="finished-create-policy-description"
    >
      Success
    </div>
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        100%
      </span>
      <span
        class="pf-v6-c-progress__status-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 32 32"
          width="1em"
        >
          <path
            d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm7.795 11.795-8.646 8.646c-.317.317-.733.475-1.149.475s-.832-.158-1.149-.475l-4.646-4.646a1.126 1.126 0 0 1 1.591-1.591l4.205 4.205 8.205-8.205a1.126 1.126 0 0 1 1.591 1.591Z"
          />
        </svg>
      </span>
    </div>
    <div
      aria-labelledby="finished-create-policy-description"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 100%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
